Add padding to clue callouts

--- a/scss/editor/callouts/_callout-clue.scss
+++ b/scss/editor/callouts/_callout-clue.scss
@@ -46,6 +46,7 @@
     --callout-header-height: 50px;
     --callout-icon: lucide-search;
     --callout-title-padding: 0;
+    --callout-padding: 0.5em;
     --clue-tape-variant: var(--clue-tape-a); // default
     --clue-paper-variant: var(--clue-paper-a); // default
     --clue-ripped-variant: var(--clue-ripped-a); // default
