Fix fwi due to recent update

--- a/scss/editor/embeds/_embed-full-width-image.scss
+++ b/scss/editor/embeds/_embed-full-width-image.scss
@@ -1,9 +1,11 @@
-@use '../../shared/full-width-image-aliases';
-@forward '../../shared/full-width-image';
+@use "../../shared/full-width-image-aliases";
+@forward "../../shared/full-width-image";
 
 $sel: ":is(";
 @each $alias in full-width-image-aliases.$aliases {
-    @if ($sel != ":is(") { $sel: $sel + ", "; }
+    @if ($sel != ":is(") {
+        $sel: $sel + ", ";
+    }
     $sel: $sel + "[alt~='#{$alias}']";
 }
 $sel: $sel + ")";
@@ -14,6 +16,10 @@ $sel: $sel + ")";
     display: block;
     font-size: 0;
     width: 100%;
+
+    .image-wrapper {
+        width: 100%;
+    }
 
     img {
         height: var(--fwi-height);
